log
Wed 22 Mar 2023 02:40:09 PM UTC: 
 tests:  0|6
total_score: 0/70
00259d1
Wed 22 Mar 2023 02:46:11 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
5e5a8d5
Wed 22 Mar 2023 02:50:22 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
31e3e7b
Wed 22 Mar 2023 02:50:38 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
426b71b
Wed 22 Mar 2023 02:50:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:12: error: expected expression before ‘List’
   46 |     return List->head->data;
      |            ^~~~
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
56c3e21
Wed 22 Mar 2023 02:51:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d54a0a0
Wed 22 Mar 2023 02:52:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
086f817
Wed 22 Mar 2023 02:54:51 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
4bc441b
Wed 22 Mar 2023 02:56:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a7a7019
